# aarf

./: Cargo.toml  README.md
src/: error.rs  literal.rs  main.rs  tokenizer.rs  type.rs
src/.github/workflows/: rust.yml
src/access_flag/: jimple.rs  mod.rs  smali.rs
src/annotation/: jimple.rs  mod.rs  smali.rs
src/class/: jimple.rs  mod.rs  smali.rs
src/field/: jimple.rs  mod.rs  smali.rs
src/instruction/: jimple.rs  mod.rs  optimization.rs  parameters_optimization.rs  parameters_smali.rs  registers_smali.rs  smali.rs
src/method/: jimple.rs  mod.rs  optimization.rs  smali.rs
