[package]
name = "aarf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
itertools = "0.10.5"
phf = { version = "0.11.1", features = ["macros"] }
walkdir = "2.3.3"
which = "4.4.0"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
